--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -54,3 +54,6 @@
     <p>VorotaPROM &copy; 2016-2018</p>
   </footer>
 </div>
+<!-- feadback start -->
+<app-modal-fead-back></app-modal-fead-back>
+<!-- feadback end -->
