--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -8,7 +8,7 @@
   display: flex;
   justify-content: space-between;
   align-items: center;
-  height: 50px;
+  height: 60px;
   transition: all .4s;
 }
 .header__logo {
@@ -39,7 +39,8 @@
 }
 .drop-menu-show {
   opacity: 1;
-  height: 175px;
+  height: auto;
+  display: block !important;
 }
 .heder__bg {
   position: fixed;
