--- a/src/app/catalog/sections/torsional/madal-form-order-torsional/madal-form-order-torsional.component.scss
+++ b/src/app/catalog/sections/torsional/madal-form-order-torsional/madal-form-order-torsional.component.scss
@@ -1,73 +1,3 @@
-/* cell fead back start */
-
-.btn-call {
-  position: fixed;
-  bottom: 25px;
-  right: 25px;
-  background-color: transparent;
-  border: 0;
-  outline: none;
-  width: 150px;
-  height: 170px;
-  border-right: 3px;
-  transition: all .3s;
-}
-
-@media (max-width: 767px) {
-  .btn-call {
-    bottom: 0;
-    right: 0;
-  }
-}
-
-.btn-call:hover {
-  background-color: rgb(212, 211, 211);
-}
-
-.btn-call:hover .btn-call-title {
-  display: inline-table;
-}
-
-.btn-call-title {
-  font-size: 13px;
-  text-transform: uppercase;
-  font-weight: bold;
-  color: #39b54a;
-  display: none;
-  padding: 10px 0;
-  position: relative;
-}
-
-.btn-closed::before,
-.btn-closed::after {
-  content: '';
-  position: absolute;
-  width: 12px;
-  height: 2px;
-  top: 0;
-  right: 0;
-  background-color: #39b54a;
-  cursor: pointer;
-}
-
-.btn-closed::before {
-  transform: rotate(45deg);
-}
-
-.btn-closed::after {
-  transform: rotate(-45deg);
-}
-
-.cell-img {
-  width: 100px;
-  height: 100px;
-  cursor: pointer;
-}
-
-/* cell fead back end */
-
-/* modal fead back start */
-
 .modal-header .close.pull-right {
   font-size: 1.5rem;
 }
@@ -88,7 +18,8 @@
   margin-bottom: 20px;
 }
 
-.form-imput {
+.form-imput,
+.form-textarea {
   width: 100%;
   max-width: 320px;
   border-radius: 5px;
@@ -97,8 +28,11 @@
   border: 2px solid #fff;
   color: #fff;
   padding: 15px 25px;
-  text-align: center;
+  text-align: left;
   transition: all .3s;
+}
+.form-textarea {
+  height: 150px;
 }
 
 .form-imput:focus.form-imput::placeholder {
@@ -152,5 +86,3 @@
   padding: 0 15px;
   color: #fff;
 }
-
-/* modal fead back end */
