--- a/src/app/gallery/gallery.component.html
+++ b/src/app/gallery/gallery.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h2 class="product__title title__after">Галерея наших работ</h2>
+  <h2 class="title">Галерея наших работ</h2>
   <div class="row gallery">
     <div class="items col-xl-3 col-lg-4 col-md-6" *ngFor="let image of images">
       <img src="{{ image.url }}" class="item" (click)="openModal(template, image)">
