ver 1.0.6 add feadback and map

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -62,5 +62,5 @@
   </footer>
 </div>
 <!-- feadback start -->
-<app-modal-fead-back></app-modal-fead-back>
+<app-modal-call-back></app-modal-call-back>
 <!-- feadback end -->
