--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,6 @@
 <app-carusel></app-carusel>
 <app-slider-advantages></app-slider-advantages>
 <app-home-cotalog></app-home-cotalog>
+<app-fead-back></app-fead-back>
+<app-map></app-map>
 
